--- a/mipagina/mipagina/plantillas/barra.html
+++ b/mipagina/mipagina/plantillas/barra.html
@@ -1,32 +1,26 @@
 <html>
+    <style>
+        #barra {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            text-transform: uppercase;
+        }
 
-<style>
-    #barra{
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        text-transform: uppercase;
-    }
+        #barra li {
+            display: inline;
+            margin: 0 20px;
+        }
+    </style>
 
-    #barra li{
-        display: inline;
-        margin: 0 20px
-    }
-
-</style>
-
-<body>
-
-    <ul id="barra">
-        <li>Home</li>
-        <li>Servicios</li>
-        <li>Quienes somos</li>
-        <li>Contacto</li>
-        <li>Acerca de</li>
-
-    </ul>
-
-</body>
-
-
+    <body>
+        <!-- Barra de navegación -->
+        <ul id="barra">
+            <li>Home</li>
+            <li>Servicios</li>
+            <li>Quienes somos</li>
+            <li>Contacto</li>
+            <li>Acerca de</li>
+        </ul>
+    </body>
 </html>
