--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <!--<link rel="stylesheet" href="./css/style.css">  -->
+    <!-- meta description -->
+    <meta name="description" content="Mantente al día con las últimas noticias del Club Atlético San Miguel de General Las Heras. Resultados, próximos partidos, y el camino del Sanmi en la liga. ¡Vamos marrón!">
+    <!-- keywords -->
+    <meta name="keywords" content="Club Atlético San Miguel, CASM, fútbol, General Las Heras, noticias, resultados, liga, Sanmi, campeonatos, comunidad, hockey, goleadores, equipo, pasión, deportes">
+
     <title>Club Atletico San Miguel</title>
+    <link rel="icon" href="./img/escudo-removebg-preview.png" type="">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -17,9 +25,9 @@
             <!-- lista desordenada -->
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/noticias.html">Noticias</a></li>
+                <li><a href="./pages/noticias.html">Fechas</a></li>
                 <li><a href="./pages/productos.html">Productos</a></li>
-                <li><a href="./pages/nosotros.html">Fechas</a></li>
+                <li><a href="./pages/nosotros.html">Nosotros</a></li>
                 <li><a href="./pages/contactos.html">Contactos</a></li>
             </ul>
         </nav>
@@ -44,13 +52,13 @@
             <div id="carouselExampleAutoplaying" class="carouselslide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./img/enjuego.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/enjuego.jpeg" class="d-block w-100" alt="Partido Club San Miguel">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/equipofestejo.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/equipofestejo.jpeg" class="d-block w-100" alt="Club San Miguel gana">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/equipojunto.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/equipojunto.jpeg" class="d-block w-100" alt="Club San Miguel llega a la final">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -66,24 +74,7 @@
             </div>
 
             <p>
-                El pasado fin de semana fue histórico para nuestro Club, con la coronación de cuatro de nuestras
-                categorías en los prestigiosos campeonatos de la Liga Lobense de Fútbol. Este logro es fruto del
-                esfuerzo, dedicación y compromiso de todos los jugadores y cuerpos técnicos que forman parte de nuestra
-                familia deportiva.
-                En primer lugar, el equipo de Reserva se consagró campeón de la Copa de Oro, demostrando una vez más su
-                superioridad en el campo y su capacidad para sobreponerse a los desafíos más difíciles. Esta victoria es
-                el resultado de un arduo trabajo en equipo y una mentalidad ganadora que se ha consolidado a lo largo de
-                la temporada.
-                El equipo de Primera Femenino también brilló, obteniendo el campeonato de la Copa Revalida. Este triunfo
-                es especialmente significativo, ya que refleja el crecimiento y la fortaleza del fútbol femenino en
-                nuestro club. Las jugadoras han mostrado un nivel de compromiso y talento que ha sido fundamental para
-                alcanzar este logro, posicionándose como un referente en la liga.
-                Por su parte, la Sexta Categoría se alzó con el título en el torneo de infantiles, destacándose por su
-                disciplina, habilidad y espíritu competitivo. Estos jóvenes jugadores son el futuro del club, y su éxito
-                en este torneo nos llena de orgullo y esperanza para lo que está por venir.
-                No podemos dejar de mencionar a la Séptima Categoría, que también se coronó campeona en el torneo de
-                infantiles. Este equipo ha demostrado una notable evolución a lo largo de la temporada, y su victoria es
-                un testimonio del talento y la pasión que existe en nuestras divisiones inferiores.
+                El pasado fin de semana, nuestro Club vivió un hito histórico al conquistar cuatro campeonatos en la Liga Lobense de Fútbol. La categoría de Reserva ganó la Copa de Oro, destacando por su superioridad y trabajo en equipo. El equipo de Primera Femenino se llevó la Copa Revalida, marcando el crecimiento del fútbol femenino en nuestro club. La Sexta Categoría y la Séptima Categoría también triunfaron en sus respectivos torneos infantiles, mostrando talento y evolución. Estos logros reflejan el esfuerzo y compromiso de jugadores y cuerpos técnicos, consolidando al club como un referente en la liga.
             </p>
         </section>
         <section class="pasion">
@@ -99,11 +90,9 @@
                 La nueva cancha será un espacio donde nuestros jugadores podrán entrenar y competir en las mejores
                 condiciones, fomentando el deporte, la salud y la camaradería. Este logro es una prueba del poder del
                 trabajo en equipo y la solidaridad que caracteriza a nuestro club.
-                Una vez más, queremos expresar nuestro más sincero agradecimiento por su apoyo y confianza. Juntos,
-                seguimos construyendo un futuro brillante para nuestro club y nuestra comunidad.
             </p>
         </section>
-        <h2 class="titulos2">Punteros del Sanmi</h2>
+        <h2 class="titulos2">Goleadores</h2>
         <table class="table">
             <thead>
                 <tr>
@@ -135,7 +124,7 @@
             </tbody>
         </table>
         <div class="boton"><a href="#arriba">Ir hacia arriba</a></div>
-        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="">
+        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="Escudo Club San Miguel">
     </main>
 
     <footer>
