--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Noticias</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!-- meta description -->
+    <meta name="description" content="Contacta con el Club Atlético San Miguel para resolver tus dudas, consultas o reclamos. Estamos aquí para ayudarte con cualquier información sobre el Sanmi.">
+        <!-- keywords -->
+        <meta name="keywords" content="Club Atlético San Miguel, CASM, contacto, consultas, reclamos, Sanmi, información, General Las Heras, atención al cliente, ayuda, soporte, fútbol, comunidad, formulario de contacto">
+    <title>Contactos</title>
+    <link rel="icon" href="../img/escudo-removebg-preview.png" type="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <h1>CASM</h1>
+        <h1>C<span>A</span>S<span>M</span></h1>
         <nav>
             <nav>
                 <!--lista desordenada-->
@@ -26,7 +31,7 @@
             </nav>
     </header>
     <main>
-        <h2 class="titulos2">Haznos culquier consulta o duda que tengas sobbre el Sanmi!</h2>
+        <h2 class="titulos2">Haznos culquier consulta o duda que tengas sobre el Sanmi!</h2>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Direccion de mail</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -35,7 +40,7 @@
             <label for="exampleFormControlTextarea1" class="form-label">Introduzca su consulta y/o reclamo</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="">
+        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="Escudo Club San Miguel">
     </main>
     <footer>
         <div>
