--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Noticias</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!-- meta description -->
+    <meta name="description" content="Mantente al día con las últimas fechas y resultados de los partidos del Club Atlético San Miguel. Consulta el calendario de encuentros y apoya a tu equipo local.">
+    <!-- keywords -->
+    <meta name="keywords" content="Club Atlético San Miguel, CASM, fechas, calendario, partidos, resultados, fútbol, Sanmi, encuentros, equipo local, reservas, categorías, General Las Heras">
+    <title>Fechas</title>
+    <link rel="icon" href="../img/escudo-removebg-preview.png" type="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <h1>CASM</h1>
+        <h1>C<span>A</span>S<span>M</span></h1>
         <nav>
             <nav>
                 <!--lista desordenada-->
@@ -81,7 +86,7 @@
                 </tr>
             </tbody>
         </table>
-        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="">
+        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="Escudo Club San Miguel">
     </main>
     <footer>
         <div>
