--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <!-- meta description -->
+    <meta name="description" content="Descubre y compra la indumentaria oficial del Club Atlético San Miguel. Camisetas de fútbol y hockey para ambos sexos, con los colores y el escudo del Sanmi.">
+    <!-- keywords -->
+    <meta name="keywords" content="productos, indumentaria oficial, Club Atlético San Miguel, camisetas de fútbol, camisetas de hockey, ropa deportiva, merchandising, Sanmi, camiseta masculina, camiseta femenina, compra online">
     <title>Productos</title>
+    <link rel="icon" href="../img/escudo-removebg-preview.png" type="">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <h1>CASM</h1>
+        <h1>C<span>A</span>S<span>M</span></h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -26,34 +31,34 @@
     <main>
         <div class="container-cards">
             <div class="card">
-                <img src="../img/camiseta.png" class="card-img-top" alt="...">
+                <img src="../img/futbolremera.png" class="card-img-top" alt="Camiseta de futbol Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de futbol</h5>
+                    <h5 class="card-title">Camiseta de futbol masculino</h5>
                     <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card">
-                <img src="../img/camiseta.png" class="card-img-top" alt="...">
+                <img src="../img/futbolremera.png" class="card-img-top" alt="Camiseta de futbol Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de futbol</h5>
+                    <h5 class="card-title">Camiseta de futbol femenino</h5>
                     <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card">
-                <img src="../img/camiseta.png" class="card-img-top" alt="...">
+                <img src="../img/hockeyremera.png" class="card-img-top" alt="Camiseta de hockey Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de futbol</h5>
-                    <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
+                    <h5 class="card-title">Camiseta de hockey masculino</h5>
+                    <p class="card-text">Camiseta de hockey clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card">
-                <img src="../img/camiseta.png" class="card-img-top" alt="...">
+                <img src="../img/hockeyremera.png" class="card-img-top" alt="Camiseta de hockey Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de futbol</h5>
-                    <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
+                    <h5 class="card-title">Camiseta de hockey femenino</h5>
+                    <p class="card-text">Camiseta de hockey clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
@@ -75,7 +80,7 @@
                 </li>
             </ul>
         </nav>
-        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="">
+        <img class="escudo" src="../img/escudo-removebg-preview.png" alt="Escudo Club San Miguel">
     </main>
     
 
