--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1>C<span>A</span>S<span>M</span></h1>
+        <img src="./img/escudo-removebg-preview.png" alt="">
         <nav>
             <!-- lista desordenada -->
             <ul>
@@ -35,7 +35,7 @@
 
     <main id="arriba">
         <section class="hero">
-            <h2>¡Vamos marrón!</h2>
+            <h1>¡Vamos marrón!</h1>
         </section>
         <section class="titulo">
             <h2>El Club Atlético San Miguel llegó a la final con este tremendo golazo!</h2>
@@ -74,7 +74,7 @@
             </div>
 
             <p>
-                El pasado fin de semana, nuestro Club vivió un hito histórico al conquistar cuatro campeonatos en la Liga Lobense de Fútbol. La categoría de Reserva ganó la Copa de Oro, destacando por su superioridad y trabajo en equipo. El equipo de Primera Femenino se llevó la Copa Revalida, marcando el crecimiento del fútbol femenino en nuestro club. La Sexta Categoría y la Séptima Categoría también triunfaron en sus respectivos torneos infantiles, mostrando talento y evolución. Estos logros reflejan el esfuerzo y compromiso de jugadores y cuerpos técnicos, consolidando al club como un referente en la liga.
+                El pasado fin de semana, nuestro Club vivió un hito histórico al conquistar cuatro campeonatos en la Liga Lobense de Fútbol. La categoría de Reserva ganó la Copa de Oro, destacando por su superioridad y trabajo en equipo. El equipo de Primera Femenino se llevó la Copa Revalida, marcando el crecimiento del fútbol femenino en nuestro club. La Sexta Categoría y la Séptima Categoría también triunfaron en sus respectivos torneos infantiles, mostrando talento y evolución. 
             </p>
         </section>
         <section class="pasion">
@@ -87,9 +87,7 @@
                 Este proyecto, que era una aspiración compartida por todos nosotros, ha sido posible gracias a su
                 constante apoyo y compromiso. Su aporte no solo representa una inversión en infraestructura, sino
                 también en el desarrollo y crecimiento de nuestros deportistas.
-                La nueva cancha será un espacio donde nuestros jugadores podrán entrenar y competir en las mejores
-                condiciones, fomentando el deporte, la salud y la camaradería. Este logro es una prueba del poder del
-                trabajo en equipo y la solidaridad que caracteriza a nuestro club.
+
             </p>
         </section>
         <h2 class="titulos2">Goleadores</h2>
