--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>C<span>A</span>S<span>M</span></h1>
+        <img src="../img/escudo-removebg-preview.png" alt="">
         <nav>
             <nav>
                 <!--lista desordenada-->
@@ -31,7 +31,7 @@
             </nav>
     </header>
     <main>
-        <h2 class="titulos2">Haznos culquier consulta o duda que tengas sobre el Sanmi!</h2>
+        <h1 class="titulos2">Haznos culquier consulta o duda que tengas sobre el Sanmi!</h1>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Direccion de mail</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
