--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>C<span>A</span>S<span>M</span></h1>
+        <img src="../img/escudo-removebg-preview.png" alt="">
         <nav>
 <nav>
     <!--lista desordenada--> 
@@ -28,7 +28,7 @@
 
 </header> 
 <main>
-    <h2>Un poco de historia...</h2>
+    <h1>Un poco de historia...</h1>
     <section class="hist">
         <img src="../img/primerpresidente.png" alt="Pedro Zamora">
         <h2>El es Pedro Zamora, quien fue nuestro primer presidente. Desde el año 1971 hasta el año 1973.</h2>
