--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>C<span>A</span>S<span>M</span></h1>
+        <img src="../img/escudo-removebg-preview.png" alt="">
         <nav>
             <nav>
                 <!--lista desordenada-->
@@ -32,6 +32,7 @@
 
     </header>
     <main>
+        <h1>Conoce las fechas del Sanmi</h1>
         <table class="table">
             <thead>
                 <tr>
