--- a/pages/productos.html
+++ b/pages/productos.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>C<span>A</span>S<span>M</span></h1>
+        <img src="../img/escudo-removebg-preview.png" alt="">
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -29,11 +29,12 @@
         </nav>
     </header>
     <main>
+        <h1>Vestite del marron</h1>
         <div class="container-cards">
             <div class="card">
                 <img src="../img/futbolremera.png" class="card-img-top" alt="Camiseta de futbol Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de futbol masculino</h5>
+                    <h2 class="card-title">Camiseta de futbol masculino</h2>
                     <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
@@ -41,7 +42,7 @@
             <div class="card">
                 <img src="../img/futbolremera.png" class="card-img-top" alt="Camiseta de futbol Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de futbol femenino</h5>
+                    <h2 class="card-title">Camiseta de futbol femenino</h2>
                     <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
@@ -49,7 +50,7 @@
             <div class="card">
                 <img src="../img/hockeyremera.png" class="card-img-top" alt="Camiseta de hockey Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de hockey masculino</h5>
+                    <h2 class="card-title">Camiseta de hockey masculino</h2>
                     <p class="card-text">Camiseta de hockey clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
@@ -57,7 +58,7 @@
             <div class="card">
                 <img src="../img/hockeyremera.png" class="card-img-top" alt="Camiseta de hockey Club San Miguel">
                 <div class="card-body">
-                    <h5 class="card-title">Camiseta de hockey femenino</h5>
+                    <h2 class="card-title">Camiseta de hockey femenino</h2>
                     <p class="card-text">Camiseta de hockey clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
