--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,7 +28,7 @@
 
 </header> 
 <main>
-    <h1>Un poco de historia...</h1>
+    <h1>Conociendo...</h1>
     <section class="hist">
         <img src="../img/primerpresidente.png" alt="Pedro Zamora">
         <h2>El es Pedro Zamora, quien fue nuestro primer presidente. Desde el año 1971 hasta el año 1973.</h2>
