--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -32,7 +32,7 @@
 
     </header>
     <main>
-        <h1>Conoce las fechas del Sanmi</h1>
+        <h1>Ultimas fechas</h1>
         <table class="table">
             <thead>
                 <tr>
