--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -18,7 +18,6 @@
 <body>
     <header>
         <img src="../img/escudo-removebg-preview.png" alt="">
-        <nav>
             <nav>
                 <!--lista desordenada-->
                 <ul>
@@ -31,7 +30,7 @@
             </nav>
     </header>
     <main>
-        <h1 class="titulos2">Haznos culquier consulta o duda que tengas sobre el Sanmi!</h1>
+        <h1 >Consulta aca!</h1>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Direccion de mail</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
