--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,32 +34,32 @@
             <div class="card">
                 <img src="../img/futbolremera.png" class="card-img-top" alt="Camiseta de futbol Club San Miguel">
                 <div class="card-body">
-                    <h2 class="card-title">Camiseta de futbol masculino</h2>
-                    <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
+                    <h2 class="card-title">Remera futbol masculino</h2>
+                    <p class="card-text">Remera futbol clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card">
                 <img src="../img/futbolremera.png" class="card-img-top" alt="Camiseta de futbol Club San Miguel">
                 <div class="card-body">
-                    <h2 class="card-title">Camiseta de futbol femenino</h2>
-                    <p class="card-text">Camiseta de futbol clasica, con los colores representativos y escudo</p>
+                    <h2 class="card-title">Remera futbol femenino</h2>
+                    <p class="card-text">Remera futbol clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card">
                 <img src="../img/hockeyremera.png" class="card-img-top" alt="Camiseta de hockey Club San Miguel">
                 <div class="card-body">
-                    <h2 class="card-title">Camiseta de hockey masculino</h2>
-                    <p class="card-text">Camiseta de hockey clasica, con los colores representativos y escudo</p>
+                    <h2 class="card-title">Remera hockey masculino</h2>
+                    <p class="card-text">Remera hockey clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
             <div class="card">
                 <img src="../img/hockeyremera.png" class="card-img-top" alt="Camiseta de hockey Club San Miguel">
                 <div class="card-body">
-                    <h2 class="card-title">Camiseta de hockey femenino</h2>
-                    <p class="card-text">Camiseta de hockey clasica, con los colores representativos y escudo</p>
+                    <h2 class="card-title">Remera hockey femenino</h2>
+                    <p class="card-text">Remera hockey clasica, con los colores representativos y escudo</p>
                     <a href="#" class="btn-primary">Comprar</a>
                 </div>
             </div>
